# LLM-Mastodon-Agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mastodon-cli-snippets.md  political-ideology-personas.md
examples/: PEFT-Agent.py  Scheduler-Routine.py
llm_mastodon_agent/: __init__.py  agent.py  client.py  mastodon.py  prompting.py  scheduler.py
llm_mastodon_agent/integrations/: __init__.py  _interface.py  huggingface.py  ollama.py  twon.py  web_api.py
llm_mastodon_agent/mastodon/: __init__.py  client.py  post.py  thread.py  timeline.py
llm_mastodon_agent/schemas/: __init__.py  post.py  timeline.py
llm_mastodon_agent/tools/: __init__.py  news.py
tests/: _conf.toml  agent.py  client.py  conf.toml  conftest.py  post.py  reply.py  scheduler.py  test_agent.py  test_client.py  test_scheduler.py  test_tools.py
